fixed overflow-y

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,6 @@ body {
   color: white;
   width: 100dvw;
   overflow-x: hidden;
-  overflow-y: hidden;
   height: 100%;
   background: rgb(9 9 11);
   border-color: #3b3b3b;
